--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ NEXTAUTH_URL="http://localhost:3000"
 # Next Auth Google Provider
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
+
+# Blob Storage
+BLOB_READ_WRITE_TOKEN=""
