--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "@vercel/blob": "^0.20.0",
+    "aframe": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.3",
@@ -41,6 +43,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/aframe": "^1.2.5",
     "@types/eslint": "^8.44.7",
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.37",
