--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-three/drei": "^9.97.0",
     "@react-three/fiber": "^8.15.16",
     "@react-three/xr": "^5.7.1",
     "@t3-oss/env-nextjs": "^0.7.1",
@@ -29,6 +30,7 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "@types/three": "^0.161.2",
     "@vercel/blob": "^0.20.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -44,6 +46,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.161.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
