--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "@types/three": "^0.161.2",
+    "@vercel/analytics": "^1.1.2",
     "@vercel/blob": "^0.20.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
