--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@vercel/blob": "^0.20.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "drizzle-orm": "^0.29.3",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
